First commit with basic chat architecture

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "code-adventure-game",
+  "name": "code-adventure-game-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node localscript.js"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint ."
   },
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "vite-plugin-svgr": "^4.3.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -19,12 +27,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "tsx": "^4.19.3",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.7"
+    "typescript-eslint": "^8.22.0"
   }
 }
