--- a/packages/client/tsconfig.client.json
+++ b/packages/client/tsconfig.client.json
@@ -20,7 +20,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@shared/*": ["../shared/src/*"]
+    }
   },
   "include": ["src"]
 }
