--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "lowdb": "^7.0.1",
