Legger til handler for bilde

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "lowdb": "^7.0.1",
     "openai": "^4.86.1",
+    "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
